--- a/app/views/public/pages/_infos.html.erb
+++ b/app/views/public/pages/_infos.html.erb
@@ -1,29 +1,5 @@
- <div class="row justify-content-evenly">
-    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
-        <div class="text-center brand-colored fs-4 m-2 p-2">
-            <i class="bi bi-person-lines-fill"></i>
-            <span class="fw-bold"> Contacts </span>
-        </div>
-        <div class="m-2 p-2">
-          <%= @texteContact %>
-        </div>
-    </div>
-    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
-        <div class="text-center brand-colored fs-4 m-2 p-2">
-          <i class="bi bi-clock"></i>
-          <span class="fw-bold"> Horaires </span>
-        </div>
-        <div class="m-2 p-2">
-          <%= @texteHoraire %>
-        </div>
-    </div>
-    <div class="col-sm bg-light m-2 p-2 rounded" data-aos="fade">
-        <div class="text-center brand-colored fs-4 m-2 p-2">
-          <i class="bi bi-geo-alt-fill"></i>
-          <span class="fw-bold"> Adresse </span>
-        </div>
-        <div class="m-2 p-2">
-          <%= @texteAdresse %>
-        </div>
-    </div>
+<div class="row justify-content-evenly">
+  <%= info_card(icon: "person-lines-fill", title: "Contacts", content: @texteContact) %>
+  <%= info_card(icon: "clock", title: "Horaires", content: @texteHoraire) %>
+  <%= info_card(icon: "geo-alt-fill", title: "Adresse", content: @texteAdresse) %>
 </div>
